# javascriptcore

./: .gitignore  README.md  React-jsc.podspec  package-lock.json  package.json
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle.kts
android/src/main/cpp/: JSCExecutorFactory.cpp  JSCExecutorFactory.h  JSCRuntimeFactory.h  OnLoad.cpp
android/src/main/java/io/github/reactnativecommunity/javascriptcore/: JSCExecutor.kt  JSCExecutorFactory.kt  JSCPackage.kt  JSCRuntimeFactory.kt
common/: JSCRuntime.cpp  JSCRuntime.h
example/: App.tsx  app.json  package-lock.json  package.json  react-native.config.js
example/android/: gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/jscexample/: JSCReactHost.kt  MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/JSCExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/JSCExample.xcodeproj/: project.pbxproj
example/ios/JSCExample.xcodeproj/xcshareddata/xcschemes/: JSCExample.xcscheme
example/ios/JSCExample.xcworkspace/: contents.xcworkspacedata
example/maestro-tests/: base.yaml
example/patches/: @react-native+gradle-plugin+0.79.0-nightly-20250213-9a401c810.patch  react-native+0.79.0-nightly-20250213-9a401c810.patch  react-native+0.79.0-nightly-20250218-cda2d11c1.patch  react-native+0.79.0-nightly-20250303-7ccb1e1fb.patch
ios/: JSCExecutorFactory.mm  RCTJscInstance.h  RCTJscInstance.mm  RCTJscInstanceFactory.mm
